[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.144", features = ["derive"] }
rand = "0.8.5"
uuid = { version = "1.1.2", features = ["v4"] }
